--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -32,13 +32,11 @@
         </header>
         <main>
             <div class="main__container">
-                <div class="main__container-title">Поможем сделать
-                    вашу квартиру
-                    уютнее</div>
-                <div class="main__container-description">Подбираем текстиль, мебель и аксессуары
-                    под ваш интерьер, находим магазины
-                    и помогаем организовать доставку </div>
-                <div class="main__container-link"><a href="">Оставить заявку</a></div>
+                <div class="main__container-title">Поможем сделать<br>вашу квартиру<br>уютнее</div>
+                <div class="main__container-description">Подбираем текстиль, мебель и аксессуары <br>под ваш интерьер,
+                    находим магазины <br>и помогаем организовать доставку </div>
+                <div class="main__container-link"><a class="main__container-link-link" href="#">Оставить заявку</a>
+                </div>
             </div>
         </main>
     </div>
