--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -40,6 +40,34 @@
             </div>
         </main>
     </div>
+    <section class="section__about">
+        <div class="section__about-container">
+            <div class="section__about-container-title">О нас</div>
+            <div class="section__about-container-img"> <img class="section__about-container-img-img"
+                    src="/MyProject/img/img1.png" alt=""> </div>
+            <div class="section__about-container-description">Премиальный европейский текстиль — одно из самых главных
+                направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя
+                внимание мельчайшим деталям — вот то, что по-настоящему вдохновляет дизайнеров нашей студии.
+                <br>
+                <br>
+                <br>
+                Наш коллектив сделает все, чтобы после сотрудничества с нами, Вам было приятно сказать:
+                « Да! Это именно то, что действительно достойно моего дома!»
+            </div>
+        </div>
+    </section>
+    <section class="section__experience">
+        <div class="section__experience-container">
+            <div class="section__experience-container-years"> <span class="number">5</span>лет опыта</div>
+            <div class="section__experience-container-project"> <span class="number">100</span>проектов</div>
+            <div class="section__experience-container-reward"> <span class="number">10</span>наград</div>
+        </div>
+    </section>
+    <section class="section__ourwork">
+        <div class="section__ourwork-container">
+            <div class="section__ourwork-title">Наши работы</div>
+        </div>
+    </section>
     <footer></footer>
 </body>
 
