add style and section

--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -65,7 +65,27 @@
     </section>
     <section class="section__ourwork">
         <div class="section__ourwork-container">
-            <div class="section__ourwork-title">Наши работы</div>
+            <div class="section__ourwork-container-title">Наши работы</div>
+            <div class="section__ourwork-container-description"><img class="section__ourwork-container-img1"
+                    src="/MyProject/img/img2.png" alt="">
+                <h3 class="section__ourwork-container-description-title">Квартира-студия
+                    30 кв.м.
+                </h3>
+                <p class="section__ourwork-container-description-description">В квартире были светлые стены и тёплые
+                    цвета. Мы сконцентрировались
+                    на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+            </div>
+            <img class="section__ourwork-container-img" src="/MyProject/img/img3.png" alt="">
+            <img class="section__ourwork-container-img" src="/MyProject/img/img4.png" alt="">
+            <img class="section__ourwork-container-img" src="/MyProject/img/img5.png" alt="">
+        </div>
+        <div class="section__ourwork-more"><a class="section__ourwork-more-link" href="#">Смотреть еще</a>
+            <div class="section__ourwork-more-arrow"> <a href=""><svg width="61" height="16" viewBox="0 0 61 16"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M60.7071 8.70711C61.0976 8.31658 61.0976 7.68342 60.7071 7.29289L54.3432 0.928932C53.9526 0.538408 53.3195 0.538408 52.9289 0.928932C52.5384 1.31946 52.5384 1.95262 52.9289 2.34315L58.5858 8L52.9289 13.6569C52.5384 14.0474 52.5384 14.6805 52.9289 15.0711C53.3195 15.4616 53.9526 15.4616 54.3432 15.0711L60.7071 8.70711ZM0 9H60V7H0V9Z"
+                            fill="#533738" />
+                    </svg></a></div>
         </div>
     </section>
     <footer></footer>
