--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -88,6 +88,47 @@
                     </svg></a></div>
         </div>
     </section>
+    <section class="section__team">
+
+        <h3>Команда</h3>
+        <div class="section__team-container">
+            <div class="section__team-container-first"><img class="section__team-container-third-photo"
+                    src="/MyProject/img/photo1.png" alt="#">
+                <p class="section__team-container-third-description">Это Маша, наш
+                    главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается
+                    и помогает сделать вашу квартиру красивой и уютной.</p>
+            </div>
+            <div class="section__team-container-second"><img class="section__team-container-third-photo"
+                    src="/MyProject/img/photo2.png" alt="#">
+                <p class="section__team-container-third-description">С нашим менеджером
+                    Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы
+                    и ответит на все вопросы.</p>
+            </div>
+            <div class="section__team-container-third"> <img class="section__team-container-third-photo"
+                    src="/MyProject/img/photo3.png" alt="#">
+                <p class="section__team-container-third-description">Катя тоже
+                    занимается дизайном.
+                    Она всегда находит общий язык
+                    с клиентами и точно знает,
+                    как обсутроить дом так, чтобы вам понравилось.</p>
+            </div>
+        </div>
+        <div class="container__team-title">
+            <h3>Как мы работаем</h3>
+        </div>
+        <div class="container__team-work">
+            <div class="container__team-work-first"><span>1</span>Знакомимся, выезжаем
+                на объект, утверждаем концепцию, подписывем договор.</div>
+            <div class="container__team-work-second"><span>2</span>Подбираем мебель, текстиль, аксессуры. Делаем
+                3D-
+                зуализацию.</div>
+            <div class="container__team-work-third"><span>3</span>Находим нужные магазины, помогаем с доставкой
+                и оплатой товаров.</div>
+            <div class="container__team-work-fourth"><span>4</span>Воплощаем проект в жизнь:
+                расставляем мебель и цветы, вешаем шторы, находим места для мелочей</div>
+        </div>
+    </section>
+
     <footer></footer>
 </body>
 
