--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/MyProject/css/simple-adaptive-slider.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -117,19 +118,161 @@
             <h3>Как мы работаем</h3>
         </div>
         <div class="container__team-work">
-            <div class="container__team-work-first"><span>1</span>Знакомимся, выезжаем
+            <div class="container__team-work-description"><span class="container__team-number">1</span>Знакомимся,
+                выезжаем
                 на объект, утверждаем концепцию, подписывем договор.</div>
-            <div class="container__team-work-second"><span>2</span>Подбираем мебель, текстиль, аксессуры. Делаем
-                3D-
-                зуализацию.</div>
-            <div class="container__team-work-third"><span>3</span>Находим нужные магазины, помогаем с доставкой
+            <div class="container__team-work-description"><span class="container__team-number">2</span>Подбираем мебель,
+                текстиль, аксессуры. Делаем
+                3D-визуализацию.</div>
+            <div class="container__team-work-description"><span class="container__team-number">3</span>Находим нужные
+                магазины, помогаем с доставкой
                 и оплатой товаров.</div>
-            <div class="container__team-work-fourth"><span>4</span>Воплощаем проект в жизнь:
-                расставляем мебель и цветы, вешаем шторы, находим места для мелочей</div>
+            <div class="container__team-work-description"><span class="container__team-number">4</span>Воплощаем проект
+                в жизнь: расставляем мебель и цветы, вешаем шторы, находим места для мелочей</div>
         </div>
+    </section>
+    <section class="section__reviews">
+        <div class="section__reviews-container">
+            <div class="section__reviews-container-title">ОТЗЫВЫ</div>
+            <div class="section__reviews-slider">
+                <div class="slider">
+                    <div class="slider__wrapper">
+                        <div class="slider__items">
+                            <div class="slider__item">
+                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
+                                    выбрала вашу студию для
+                                    украшения своего дома.
+                                    <br>
+                                    <br>
+                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
+                                    с сотрудниками. Не ожидала, что это будет так легко!
+                                    <br>
+                                    <br>
+                                    Буду советовать и своим друзьям к вам обращаться!»
+                                    <br>
+                                    <br>
+                                    АННА БЕЛОВСКАЯ
+                                </div>
+                                <div class="slider__item-img-img">
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide1.png" alt="">
+                                    </div>
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
+                                    выбрала вашу студию для
+                                    украшения своего дома.
+                                    <br>
+                                    <br>
+                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
+                                    с сотрудниками. Не ожидала, что это будет так легко!
+                                    <br>
+                                    <br>
+                                    Буду советовать и своим друзьям к вам обращаться!»
+                                    <br>
+                                    <br>
+                                    АННА БЕЛОВСКАЯ
+                                </div>
+                                <div class="slider__item-img-img">
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide1.png" alt="">
+                                    </div>
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
+                                    выбрала вашу студию для
+                                    украшения своего дома.
+                                    <br>
+                                    <br>
+                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
+                                    с сотрудниками. Не ожидала, что это будет так легко!
+                                    <br>
+                                    <br>
+                                    Буду советовать и своим друзьям к вам обращаться!»
+                                    <br>
+                                    <br>
+                                    АННА БЕЛОВСКАЯ
+                                </div>
+                                <div class="slider__item-img-img">
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide1.png" alt="">
+                                    </div>
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
+                                    выбрала вашу студию для
+                                    украшения своего дома.
+                                    <br>
+                                    <br>
+                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
+                                    с сотрудниками. Не ожидала, что это будет так легко!
+                                    <br>
+                                    <br>
+                                    Буду советовать и своим друзьям к вам обращаться!»
+                                    <br>
+                                    <br>
+                                    АННА БЕЛОВСКАЯ
+                                </div>
+                                <div class="slider__item-img-img">
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide1.png" alt="">
+                                    </div>
+                                    <div class="slider__item-img">
+                                        <img src="/MyProject/img/slide2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="slider__control slider__control_prev" href="#" role="button" data-slide="prev"></a>
+                    <a class="slider__control slider__control_next" href="#" role="button" data-slide="next"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section__application">
+        <div class="section__application-container">
+            <div class="section__application-container-title">Оставить заявку</div>
+            <div class="section__application-container-description">Оставьте свои контакты. Менеджер перезвонит <br>
+                в удобное вам время и ответит на все вопросы.</div>
+            <div class="section__application-container-input">
+                <form action="">
+                    <input class="section__application-container-input-text" type="text" placeholder="Введите имя"><br>
+                    <input class="section__application-container-input-email" type="email" placeholder="Введите email">
+                </form>
+            </div>
+            <div class="section__application-container-btn">
+                <button class="btn" type="submit">Оставить заявку</button>
+            </div>
+        </div>
+        <iframe class="section__application-maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2352.6596579526777!2d27.684191115858127!3d53.866699680091315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcd9312b17f4d%3A0x9212240a0de9438b!2z0YPQuy4g0JDQvdCz0LDRgNGB0LrQsNGPIDIwLzMsINCc0LjQvdGB0Lo!5e0!3m2!1sru!2sby!4v1628270376922!5m2!1sru!2sby"
+            width="590" height="620" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
     <footer></footer>
+    <script src="/MyProject/js/simple-adaptive-slider.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            new SimpleAdaptiveSlider('.slider', {
+                loop: true,
+                autoplay: true,
+                interval: 3000,
+                swipe: true,
+            });
+        });</script>
 </body>
 
 </html>
