--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -262,7 +262,15 @@
             width="590" height="620" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </section>
 
-    <footer></footer>
+    <footer>
+        <div class="footer__container">
+            <div><a class="footer__phone-link" href="tel:+375293579476">+375(29) 357-94-76</a> <span
+                    class="footer__address">г. Минск, ул.
+                    Ангарская, д. 20</span></div>
+            <div class="footer__name">ИП Полянский А.С</div>
+        </div>
+
+    </footer>
     <script src="/MyProject/js/simple-adaptive-slider.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
