--- a/MyProject/index.html
+++ b/MyProject/index.html
@@ -179,34 +179,10 @@
                                 </div>
                                 <div class="slider__item-img-img">
                                     <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide1.png" alt="">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide1.png" alt="">
                                     </div>
                                     <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide2.png" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slider__item">
-                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
-                                    выбрала вашу студию для
-                                    украшения своего дома.
-                                    <br>
-                                    <br>
-                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
-                                    с сотрудниками. Не ожидала, что это будет так легко!
-                                    <br>
-                                    <br>
-                                    Буду советовать и своим друзьям к вам обращаться!»
-                                    <br>
-                                    <br>
-                                    АННА БЕЛОВСКАЯ
-                                </div>
-                                <div class="slider__item-img-img">
-                                    <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide1.png" alt="">
-                                    </div>
-                                    <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide2.png" alt="">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide2.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -227,10 +203,34 @@
                                 </div>
                                 <div class="slider__item-img-img">
                                     <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide1.png" alt="">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide1.png" alt="">
                                     </div>
                                     <div class="slider__item-img">
-                                        <img src="/MyProject/img/slide2.png" alt="">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide2.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__item">
+                                <div class="slider__item-slide">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что
+                                    выбрала вашу студию для
+                                    украшения своего дома.
+                                    <br>
+                                    <br>
+                                    Работа шла быстро, было очень приятно общаться и взаимодествовайть
+                                    с сотрудниками. Не ожидала, что это будет так легко!
+                                    <br>
+                                    <br>
+                                    Буду советовать и своим друзьям к вам обращаться!»
+                                    <br>
+                                    <br>
+                                    АННА БЕЛОВСКАЯ
+                                </div>
+                                <div class="slider__item-img-img">
+                                    <div class="slider__item-img">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide1.png" alt="">
+                                    </div>
+                                    <div class="slider__item-img">
+                                        <img class="slider__item-slide-img" src="/MyProject/img/slide2.png" alt="">
                                     </div>
                                 </div>
                             </div>
